RESOLVED FIXED301358
Underline appears on top of the line instead of under in horizontal writing mode
https://bugs.webkit.org/show_bug.cgi?id=301358
Summary Underline appears on top of the line instead of under in horizontal writing mode
alan
Reported 2025-10-23 09:48:44 PDT
Attachments
Patch (5.78 KB, patch)
2025-10-23 09:51 PDT, alan
no flags
Patch (5.80 KB, patch)
2025-10-23 09:55 PDT, alan
no flags
[fast-cq]Patch (5.82 KB, patch)
2025-10-23 12:12 PDT, alan
no flags
alan
Comment 1 2025-10-23 09:51:01 PDT
Antti Koivisto
Comment 2 2025-10-23 09:53:15 PDT
Comment on attachment 477180 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=477180&action=review > COMMIT_MESSAGE:7 > +In vertical writing-modes, this keyword forces the line to be placed on the right side of the text. In horizontal writing-modes, it is a synonym of auto. which keyword?
alan
Comment 3 2025-10-23 09:55:38 PDT
alan
Comment 4 2025-10-23 09:59:42 PDT
(In reply to Antti Koivisto from comment #2) > Comment on attachment 477180 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=477180&action=review > > > COMMIT_MESSAGE:7 > > +In vertical writing-modes, this keyword forces the line to be placed on the right side of the text. In horizontal writing-modes, it is a synonym of auto. > > which keyword? this.
fantasai
Comment 5 2025-10-23 11:21:09 PDT
r+ fantasai
fantasai
Comment 6 2025-10-23 11:23:02 PDT
Comment on attachment 477181 [details] Patch LGTM
alan
Comment 7 2025-10-23 12:12:30 PDT
Created attachment 477182 [details] [fast-cq]Patch
EWS
Comment 8 2025-10-23 12:44:13 PDT
Committed 302051@main (b4596ae8c90e): <https://commits.webkit.org/302051@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477182 [details].
Radar WebKit Bug Importer
Comment 9 2025-10-23 12:45:13 PDT
Tim Nguyen (:ntim)
Comment 10 2025-10-23 14:40:15 PDT
Note You need to log in before you can comment on or make changes to this bug.