Underline appears on top of the line instead of under in horizontal writing mode https://bugs.webkit.org/show_bug.cgi?id=301358 <rdar://162551943>

Reviewed by Antti Koivisto and Elika Etemad.

In vertical writing-modes, 'text-underline-position: right' forces the line to be placed on the right side of the text. In horizontal writing-modes, it is a synonym of auto.

* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/reference/text-underline-position-horizontal2-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/text-underline-position-horizontal2-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/text-underline-position-horizontal2.html: Added.
* Source/WebCore/style/InlineTextBoxStyle.cpp:
(WebCore::computedUnderlineOffset):

Canonical link: https://commits.webkit.org/302051@main